@@ -6,6 +6,7 @@ Changes from 1.0p3 to 2.0alpha:
 	- iptables upgraded to 1.3.6
 	- upgraded net-snmp to 5.3.1
 	- upgraded openssl to 0.9.7l
+	- removed bridge support (improving routing performance)
 
 Changes from 1.0p2 to 1.0p3:
 	- raised the default IP_MAX_MEMBERSHIPS from 20 to 128 in
